2018-11-25  Tim Horton  <timothy_horton@apple.com>

        Make it possible to insert editable images with a gesture
        https://bugs.webkit.org/show_bug.cgi?id=191937

        Reviewed by Wenson Hsieh.

        * WebKitTestRunner/ios/UIScriptControllerIOS.mm:
        (WTR::UIScriptController::drawSquareInEditableImage):
        If the canvas already has a drawing, draw a new stroke on top of it
        instead of removing the existing stroke.

2018-11-24  Wenson Hsieh  <wenson_hsieh@apple.com>

        [Cocoa] Add WKWebView SPI to trigger and remove data detection
        https://bugs.webkit.org/show_bug.cgi?id=191918
        <rdar://problem/36185051>

        Reviewed by Tim Horton.

        Add an API test to exercise the new WebKit SPI.

        * TestWebKitAPI/DataDetectorsCoreSPI.h: Added.
        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * TestWebKitAPI/Tests/WebKitCocoa/DataDetection.mm:
        (-[WKWebView synchronouslyDetectDataWithTypes:]):
        (-[WKWebView synchronouslyRemoveDataDetectedLinks]):
        (TEST):
        * TestWebKitAPI/Tests/WebKitCocoa/WKAttachmentTests.mm:
        (TestWebKitAPI::TEST):
        (-[TestWKWebView tagsInBody]): Deleted.
        (-[TestWKWebView expectElementTagsInOrder:]): Deleted.
        (-[TestWKWebView expectElementCount:tagName:]): Deleted.
        (-[TestWKWebView expectElementTag:toComeBefore:]): Deleted.

        Rename this from `-expectElementCount:tagName:` to `-expectElementCount:querySelector:`.

        * TestWebKitAPI/Tests/WebKitCocoa/data-detectors.html: Added.

        Add a new test page containing some content that can be data detected.

        * TestWebKitAPI/cocoa/TestWKWebView.h:
        * TestWebKitAPI/cocoa/TestWKWebView.mm:
        (-[WKWebView tagsInBody]):
        (-[WKWebView expectElementTagsInOrder:]):
        (-[WKWebView expectElementCount:querySelector:]):
        (-[WKWebView expectElementTag:toComeBefore:]):
